@@ -14,6 +14,9 @@ NEW FEATURES
     o	new anyDuplicated(x) returns 0 (= FALSE) or the index of the
 	first duplicated entry of x.
 
+    o	matplot(), matlines() and matpoints() now also obey a 'lend'
+	argument, determining line end styles. (Wish of PR#13619).
+
 
 BUG FIXES
 
@@ -21,7 +24,7 @@ BUG FIXES
 	in the enclosure of the current function, rather than in the
 	function header itself.	 (This caused integrate() to fail in
 	certain cases.)
-	
+
     o	col2rgb("#00000080", TRUE) would return the background colour.
 	(Reported by Hadley Wickham.)
 
